@@ -3,6 +3,7 @@
 	* tramp.el (tramp-coding-commands): Additionally try "uudecode -o
 	/dev/stdout" before trying "uudecode -o -".  Suggested by Han
 	Boetes.
+	(tramp-uudecode): Mention `uudecode -o /dev/stdout'.
 
 2004-10-23  Kai Grossjohann  <kai.grossjohann@gmx.net>
 
